<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yumify</string>
    <string name="alt_icon_splashscreen">splash_screen_icon</string>
    <string name="welcome_back">Selamat Datang kembali.</string>
    <!-- Login Strings   -->
    <string name="title">YUMIFY</string>
    <string name="login_description">Masuk terlebih dahulu untuk melakukan transaksi</string>
    <string name="login_alt_image">yumify_icon</string>
    <string name="login_label_title">MASUK</string>
    <string name="login_label_username">Nama Pengguna</string>
    <string name="login_label_password">Kata Sandi</string>
    <string name="login_button_text">Lanjutkan</string>
    <string name="login_username_hint">Masukan nama pengguna anda</string>
    <string name="login_password_hint">Masukan kata sandi anda</string>
    <!-- Home Strings   -->
    <string name="home_welcome">Hai, Selamat Datang !</string>
    <string name="home_user_variable">{user}</string>home_cart_image_description
    <string name="home_search_hint">Cari product...</string>
    <string name="home_label_search">Cari yang kamu butuhkan disini</string>
    <string name="home_cart_image_description">cart_icon_product</string>
    <string name="home_popup_title">Tambah Pesanan Kedalam Keranjang</string>
    <string name="home_popup_image_description">product_cart_image</string>
    <string name="home_popup_product_name">{product_name}</string>
    <string name="home_popup_product_price">{product_price}</string>
    <string name="home_popup_product_qty">{product_qty}</string>
    <string name="home_popup_button_min">-</string>
    <string name="home_popup_button_plus">+</string>
    <string name="home_popup_total_price">Total Harga : Rp. 20.000,00</string>
    <string name="home_popup_button_add_product">Tambah Pesanan</string>

    <!-- Cart Strings  -->
    <string name="cart_title">RINCIAN PESANAN</string>
    <string name="cart_title_label">Berikut rincian pesanan yang akan anda beli</string>
    <string name="cart_product_name">{product_name}</string>
    <string name="cart_index">1.</string>
    <string name="cart_product_price">{product_price}</string>
    <string name="cart_product_qty">{product_qty}</string>
    <string name="cart_image_product_description">product_name</string>
    <string name="cart_image_remove_description">remove_icon</string>
    <string name="cart_choose_payment">Pilih Pembayaran</string>
    <string name="cart_total_payment">Total Pembelian : Rp. 10.000,00</string>
    <string name="cart_button_next_payment">Lanjutkan Pembayaran</string>
    <string-array name="cart_selection_payment">
        <item>QRIS</item>
        <item>BCA VA</item>
        <item>MANDIRI VA</item>
    </string-array>

    <!--  PAYMENTS PAGE  -->
    <string name="payment_title">Pembayaran</string>
    <string name="payment_description">Lakukan pembayaran anda segera untuk menyelesaikan pesanan.</string>
    <string name="payment_box_description">Scan Kode QRIS Berikut untuk melakukan pembayaran</string>


    <string name="payment_box_total">Total Harga : </string>
    <string name="payment_box_button">Refresh Pembayaran</string>
    <string name="payment_box_order_id">Order ID : </string>
    <string name="payment_status_settlement">Pembayaran Berhasil</string>
    <string name="payment_status_pending">Menunggu Pembayaran</string>
    <string name="payment_status_error">Pembayaran Gagal</string>

    <string name="payment_footer_description">Otomatis diperbarui jika pembayaran telah dilakukana ataupun tidak.</string>
    <string name="payment_status_settlement_desc">Terimakasih telah melakukan Pembayaran. Pesanan anda akan segera diproses.</string>
    <string name="payment_status_error_desc">Pembayaran sudah tidak berlaku atau kadaluarsa. Silahkan melakukan pesanan kembali..</string>
</resources>