<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <ImageView
        android:id="@+id/ImageHomeIcon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/login_alt_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_bg" />

    <TextView
        android:id="@+id/TextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/title"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ImageHomeIcon"
        tools:layout_editor_absoluteX="-73dp"
        tools:layout_editor_absoluteY="200dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/login_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/TextTitle"

        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/containerWhite"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_top_radius"
        android:orientation="vertical"
        android:padding="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.6"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black"
            android:text="@string/login_label_title"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="48dp"
            android:id="@+id/labelUsername"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/login_label_username" />

        <EditText
            android:id="@+id/InputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/labelUsername"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/login_username_hint"
            android:autofillHints="username"
            android:ems="10"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:inputType="text"
            android:layout_marginBottom="16dp"
             />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_regular"
            android:layout_height="wrap_content"
            android:text="@string/login_label_password" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:textSize="14sp"
            android:ems="10"
            android:textColor="@color/black"
            android:padding="12dp"
            android:minHeight="48dp"
            android:hint="@string/login_password_hint"
            android:autofillHints="password"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_primary"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            android:text="@string/login_button_text"
            android:fontFamily="@font/inter_regular"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>