<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cart">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/headerCart"
                android:layout_width="match_parent"
                android:paddingHorizontal="24dp"
                android:background="@color/primary"
                android:gravity="center_vertical"
                android:layout_height="108dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:text="@string/cart_title" />
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/white"
                    android:text="@string/cart_title_label"/>
            </LinearLayout>

            <!-- Product-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="24dp"
                android:paddingVertical="14dp"
                android:background="@drawable/border_bottom">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cart_index"/>
                <ImageView
                    android:id="@+id/cartProductImage"
                    android:layout_width="64dp"
                    android:contentDescription="@string/cart_image_product_description"
                    android:layout_height="64dp"
                    app:srcCompat="@drawable/icon_bg" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:textSize="18sp"
                        android:textColor="@color/primary"
                        android:text="@string/cart_product_name" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:textSize="12sp"
                        android:textColor="@color/primary"
                        android:text="@string/cart_product_price" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:textColor="@color/primary"
                        android:textSize="12sp"
                        android:text="@string/cart_product_qty" />
                </LinearLayout>
                <ImageView
                    android:id="@+id/removeIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="bottom"
                    android:contentDescription="@string/cart_image_remove_description"
                    app:srcCompat="@drawable/removeicon" />
            </LinearLayout>
        <!--    -->
        </LinearLayout>
    </ScrollView>


<!--    Checkout Popup  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp"
        android:visibility="visible"
        android:background="@drawable/background_top_radius_border"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:text="@string/cart_choose_payment" />
        <Spinner
            android:id="@+id/selectionPayment"
            android:layout_width="match_parent"
            android:background="@drawable/input_border"
            android:layout_height="48dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="4dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:layout_gravity="top|center_vertical"
                android:text="@string/cart_total_payment" />
            <Button
                android:id="@+id/buttonNextPayment"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingHorizontal="24dp"
                android:textSize="12sp"
                android:background="@drawable/button_primary"
                android:text="@string/cart_button_next_payment" />
        </LinearLayout>
    </LinearLayout>
<!-- END CHECKOUT -->

</androidx.constraintlayout.widget.ConstraintLayout>