<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:id="@+id/splashScreen"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/alt_icon_splashscreen"
            app:srcCompat="@drawable/icon_bg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="36sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/welcome_back"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_marginVertical="24dp"
            style="?android:attr/progressBarStyle"
            android:indeterminate="true"
            android:indeterminateTintMode="src_in"
            android:indeterminateTint="@color/primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iconLocation"
            android:contentDescription="@string/login_alt_image"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/united_states" />

        <TextView
            android:id="@+id/textLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="United States"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="14sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>